# qref

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  example_routine.json  example_routine.yaml  mkdocs.yml  pyproject.toml  versions.json
.github/: pull_request_template.md  release-please.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  quality_checks.yaml  release.yaml
docs/: design.md  development.md  format.md  index.md  library.md  psidocs.css
docs/examples/: alias_sampling.yaml  basic_program.json  basic_program.yaml  basic_program_concise.yaml  qpe.yaml
site/: 404.html
site/development/: index.html
site/format/: index.html
site/search/: search_index.json
src/hqar/: __init__.py  _operation_v1.py  _schema_v1.py
src/hqar/experimental/: rendering.py  visualization.py
src/qart/: __init__.py  _schema_v1.py
src/qart/experimental/: rendering.py
src/qref/: __init__.py  _schema_v1.py  functools.py  qualtran_integration.py  qualtran_test.py  schema_v1.py  verification.py
src/qref/experimental/: __init__.py  rendering.py
tests/: conftest.py
tests/hqar/: test_schema_validation.py
tests/hqar/data/: invalid_operation_examples.yaml  invalid_program_examples.yaml  valid_operation_examples.yaml  valid_program_examples.yaml
tests/hqar/experimental/: test_rendering.py
tests/qart/: test_schema_validation.py
tests/qart/experimental/: test_rendering.py
tests/qref/: test_accessing_objects_by_name.py  test_assignment_validation.py  test_functools.py  test_querying_by_name.py  test_schema_validation.py  test_topology_verification.py
tests/qref/data/: invalid_program_examples.yaml  invalid_pydantic_programs.yaml  (+2 more)
v0.1.3/: objects.inv
v0.1.6/examples/: basic_program.yaml
v0.10.0/: objects.inv
v0.10.0/design/: index.html
v0.10.0/development/: index.html
v0.10.0/format/: index.html
v0.10.0/search/: search_index.json
v0.11.0/: index.html
v0.11.0/design/: index.html
v0.11.0/development/: index.html
v0.11.0/format/: index.html
v0.11.0/search/: search_index.json
v0.2.0/: index.html
v0.4.0/search/: search_index.json
v0.5.0/: 404.html  index.html
v0.5.0/examples/: alias_sampling.yaml
v0.5.0/search/: search_index.json
v0.6.0/: objects.inv
v0.6.0/format/: index.html
v0.6.0/search/: search_index.json
v0.6.1/development/: index.html
v0.6.1/search/: search_index.json
v0.7.0/: 404.html  index.html  objects.inv
v0.7.0/design/: index.html
v0.7.0/development/: index.html
v0.7.0/format/: index.html
v0.7.0/search/: search_index.json
v0.8.0/: 404.html  objects.inv
v0.8.0/format/: index.html
v0.8.0/search/: search_index.json
v0.9.0/: index.html  objects.inv
v0.9.0/design/: index.html
v0.9.0/search/: search_index.json
(+17 files in other folders)
